--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <input type="number" id="productPrice" class="inputPrice" placeholder="Preço do produto">
     <input type="number" id="productQuantity" class="inputDesc" placeholder="Quantidade do produto">
     <button id="buttonSend" class="send">Cadastrar produto</button>
-    <button id="buttonList" class="send">Listar produtos</button>
+    <button onclick="list()"id="buttonList" class="send">Listar produtos</button>
 
 </div>
  
