--- a/updateForm.html
+++ b/updateForm.html
@@ -8,21 +8,16 @@
 </head>
 <body>
     <div class="dashboard">
-<form action="/cadastro" method="POST">
+<form action="/alteracao" method="POST">
     <input type="text" id="productName" name="productName" class="inputName" placeholder="Nome do produto">
     <input type="text" id="productDesc" name="productDesc" class="inputDesc" placeholder="Descrição do produto">
     <input type="number" id="productPrice" name="productPrice" class="inputPrice" placeholder="Preço do produto">
     <input type="number" id="productQuantity" name="productQuantity" class="inputDesc" placeholder="Quantidade do produto">
+    <select name="selectpicker" id="selectpicker"> <option value="1"></option></select>
     <button type="submit" id="buttonSend" class="send">Cadastrar produto</button>
 </form>
 
 </div>
-<form action="/form">
-    <button type="submit" id="buttonUpdate" class="dashboard send">Editar produto</button>
-</form>
-<form action="/lista" method="GET">
-<button type="submit" id="buttonList" class="dashboard send">Listar produtos</button>
-</form>
     <script src="/src/js/app.js">
     </script>
 </body>
